k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: mekano-system
  labels:
    app.kubernetes.io/part-of: mekano
